@@ -1,11 +1,11 @@
 package com.team.HoneyBadger.Service;
 
+
 import com.team.HoneyBadger.Exception.DataDuplicateException;
 import com.team.HoneyBadger.Exception.InvalidFileTypeException;
 import com.team.HoneyBadger.Exception.UnauthorizedException;
 import com.team.HoneyBadger.DTO.*;
 import com.team.HoneyBadger.Entity.*;
-import com.team.HoneyBadger.Enum.EmailStatus;
 import com.team.HoneyBadger.Enum.KeyPreset;
 import com.team.HoneyBadger.Enum.MessageType;
 import com.team.HoneyBadger.HoneyBadgerApplication;
@@ -174,9 +174,6 @@ public class MultiService {
     /*
      * ChatRoom
      */
-    public ChatroomResponseDTO getChatRoom(Long chatroom_id) {
-        return getChatRoom(chatroomService.getChatRoomById(chatroom_id));
-    }
 
     @Transactional
     public ChatroomResponseDTO getChatRoomType(ChatroomRequestDTO chatroomRequestDTO) {
@@ -263,13 +260,25 @@ public class MultiService {
     private ChatroomResponseDTO getChatRoom(Chatroom chatroom) {
         List<String> users = chatroom.getParticipants().stream().map(participant -> participant.getUser().getUsername()).toList();
         Message latestMessage = messageService.getLatesMessage(chatroom.getMessageList());
-        MessageResponseDTO messageResponseDTO;
+        MessageResponseDTO latestMessageDTO;
         if (latestMessage != null) {
-            messageResponseDTO = GetMessageDTO(latestMessage);
+            latestMessageDTO = GetMessageDTO(latestMessage);
         } else {
-            messageResponseDTO = null;
+            latestMessageDTO = null;
         }
-        return ChatroomResponseDTO.builder().id(chatroom.getId()).name(chatroom.getName()).users(users).messageResponseDTO(messageResponseDTO).build();
+        MessageResponseDTO notificationDTO;
+        if(chatroom.getNotification() != null){
+            notificationDTO = GetMessageDTO(chatroom.getNotification());
+        }else {
+            notificationDTO = null;
+        }
+        return ChatroomResponseDTO.builder().id(chatroom.getId()).name(chatroom.getName()).users(users).latestMessage(latestMessageDTO).notification(notificationDTO).build();
+    }
+
+    @Transactional
+    public ChatroomResponseDTO getChatRoomById(Long chatroomId) {
+        Chatroom chatroom = chatroomService.getChatRoomById(chatroomId);
+        return getChatRoom(chatroom);
     }
 
     @Transactional
@@ -299,7 +308,6 @@ public class MultiService {
         SiteUser siteUser = userService.get(username);
         Participant participant = participantService.get(siteUser, chatroom);
         chatroom.getParticipants().remove(participant);
-        participantService.delete(participant);
 
         chatroomService.save(chatroom);
         return getChatRoom(chatroom);
@@ -378,13 +386,22 @@ public class MultiService {
         return email.getId();
     }
 
-    public List<EmailResponseDTO> getEmailsForUser(String username, EmailStatus status) {
-        List<Email> emails = switch (status) {
-            case SENDER -> emailReceiverService.getEmailsForUser(username); //구분 해야 함
-            case RECEIVER -> emailReceiverService.getEmailsForUser(username); //구분 해야 함
-            case RESERVATION -> emailReceiverService.getEmailsForUser(username); //구분 해야 함
-        };
-        return emails.stream().map(this::getEmailDTO).toList();
+    public Object getEmailsForUser(String username, int statusIndex) {
+//        List<?> emails;
+//        SENDER, RECEIVER, RESERVATION
+        switch (statusIndex) {
+            case 0:
+                List<Email> SenderEmail = emailReceiverService.getSentEmailsForUser(username);
+                return SenderEmail.stream().map(this::getEmailDTO).collect(Collectors.toList());
+            case 1:
+                List<Email> ReceiverEmail = emailReceiverService.getReceivedEmailsForUser(username);
+                return ReceiverEmail.stream().map(this::getEmailDTO).collect(Collectors.toList());
+            case 2:
+                List<EmailReservation> ReservationEmail = emailReservationService.getReservedEmailsForUser(username);
+                return ReservationEmail.stream().map(this::getEmailReservationDTO).collect(Collectors.toList());
+            default:
+                throw new IllegalArgumentException("Invalid status index: " + statusIndex);
+        }
     }
 
     public Boolean markEmailAsRead(Long emailId, String receiverId) {
@@ -421,28 +438,14 @@ public class MultiService {
                         .stream() //
                         .map(er -> er.getReceiver().getUsername()) //
                         .toList()) //
-                .filePathList(filePathList) //
+                .senderTime(this.dateTimeTransfer(email.getCreateDate())) //
+                .files(filePathList) //
                 .build();
     }
 
     public EmailResponseDTO getEmailDTO(Long emailId) {
         Email email = emailService.getEmail(emailId);
         return getEmailDTO(email);
-    }
-
-    public String fileUpload(Long roomId, MultipartFile file) throws IOException {
-
-        String path = HoneyBadgerApplication.getOsType().getLoc();
-        UUID uuid = UUID.randomUUID();
-        String fileName = "/api/chatroom/" + roomId.toString() + "/" + uuid.toString() + "." + (file.getOriginalFilename().contains(".") ? file.getOriginalFilename().split("\\.")[1] : "");// IMAGE
-
-        // 너굴맨이 해치우고 갔어요!
-        File dest = new File(path + fileName);
-
-        if (!dest.getParentFile().exists()) dest.getParentFile().mkdirs();
-        file.transferTo(dest);
-
-        return fileName;
     }
 
     /*
@@ -472,10 +475,10 @@ public class MultiService {
         emailReservationService.findByUsernameDelete(emailReservation, username);
     }
 
-    public EmailReservationResponseDTO reservationEmail(EmailReservationRequestDTO emailReservationRequestDTO, String username) {
+    public Long reservationEmail(EmailReservationRequestDTO emailReservationRequestDTO, String username) {
         SiteUser sender = userService.get(username);
         EmailReservation emailReservation = emailReservationService.save(emailReservationRequestDTO, sender);
-        return getEmailReservationDTO(emailReservation);
+        return emailReservation.getId();
     }
 
     private EmailReservationResponseDTO getEmailReservationDTO(EmailReservation reservation) {
@@ -573,6 +576,20 @@ public class MultiService {
         }
     }
 
+    public String fileUpload(Long chatroomId, MultipartFile file) throws IOException {
+
+        String path = HoneyBadgerApplication.getOsType().getLoc();
+        UUID uuid = UUID.randomUUID();
+        String fileName = "/api/chatroom/" + chatroomId.toString() + "/" + uuid.toString() + "." + (file.getOriginalFilename().contains(".") ? file.getOriginalFilename().split("\\.")[1] : "");// IMAGE
+
+        // 너굴맨이 해치우고 갔어요!
+        File dest = new File(path + fileName);
+
+        if (!dest.getParentFile().exists()) dest.getParentFile().mkdirs();
+        file.transferTo(dest);
+
+        return fileName;
+    }
 
     public String fileUpload(String username, MultipartFile file) throws IOException {
 
@@ -647,7 +664,13 @@ public class MultiService {
     public MessageReservationResponseDTO reservationMessage(MessageReservationRequestDTO messageReservationRequestDTO, String username) {
         Chatroom chatroom = chatroomService.getChatRoomById(messageReservationRequestDTO.chatroomId());
         SiteUser sender = userService.get(username);
-        MessageReservation messageReservation = MessageReservation.builder().chatroom(chatroom).message(messageReservationRequestDTO.message()).sender(sender).sendDate(messageReservationRequestDTO.sendTime()).messageType(messageReservationRequestDTO.messageType()).build();
+        MessageReservation messageReservation = MessageReservation.builder()
+                .chatroom(chatroom)
+                .message(messageReservationRequestDTO.message())
+                .sender(sender)
+                .sendDate(messageReservationRequestDTO.sendDate())
+                .messageType(messageReservationRequestDTO.messageType())
+                .build();
 
         messageReservationService.save(messageReservation);
         return getMessageReservation(messageReservation);
@@ -664,20 +687,30 @@ public class MultiService {
         messageReservationService.delete(messageReservation);
     }
 
-    public MessageReservationResponseDTO updateReservationMessage(Long reservationMessageId, MessageReservationRequestDTO messageReservationRequestDTO, String username) {
-        MessageReservation messageReservation = messageReservationService.getMessageReservation(reservationMessageId);
-        if (messageReservation.getSender().getUsername().equals(username)) {
-            messageReservationService.update(messageReservation, messageReservationRequestDTO.message(), messageReservation.getSendDate());
+    public MessageReservationResponseDTO updateReservationMessage(Long id,
+                                                                  MessageReservationRequestDTO messageReservationRequestDTO,
+                                                                  String username) throws DataNotFoundException {
+        MessageReservation messageReservation = messageReservationService.getMessageReservation(id);
+        if (messageReservation.getSender().getUsername().equals(username) && messageReservation.getChatroom().getId().equals(messageReservationRequestDTO.chatroomId())) {
+            messageReservationService.update(messageReservation, messageReservationRequestDTO);
         }
         return getMessageReservation(messageReservation);
     }
 
-    public MessageResponseDTO notification(Long chatroomId, Long messageId) {
-        Chatroom chatroom = chatroomService.getChatRoomById(chatroomId);
-        Message message = messageService.getMessageById(messageId);
+    public ChatroomResponseDTO notification(NoticeRequestDTO noticeRequestDTO) {
+        Chatroom chatroom = chatroomService.getChatRoomById(noticeRequestDTO.chatroomId());
+        Message message = messageService.getMessageById(noticeRequestDTO.messageId());
         chatroomService.notification(chatroom, message);
 
-        return GetMessageDTO(message);
+        return getChatRoom(chatroom);
+    }
+
+    public UserResponseDTO getUser(String username) {
+        return getUserResponseDTO( userService.get(username));
+    }
+
+    public List<UserResponseDTO> getAllUser(String username) {
+        return  userService.getUsernameAll(username).stream().map(this::getUserResponseDTO).toList();
     }
 
     /*
